# RexOxBlocknote

./: .gitignore  .pypirc  MANIFEST.in  README.md  elements.py  main.ipynb  pyproject.toml  requirements.txt  setup.py
Ext/: app.py
Test/: app.py
development/: dev.py
example/: app.py  main.py  params.py
redox/catalogs/: elements.py
redox/database/: datasets.py
redox/entities/: atom.py  ion.py  molecula.py
src/modchem/commands/: __init__.py  application.py  command.py
src/modchem/core/: app.py  logger.py  params.py  project.py
src/modchem/database/: datasets.py  redox_periodictable.csv
src/modchem/entities/: atom.py  ion.py
src/modchem/experiment/: experimental.py
src/modchem/templates/: __init__.py  app.py-tpl  main.py-tpl  replace.py
src/redox/catalogs/: elements.py
src/redox/entities/: ion.py
test/: test_app.py  test_project.py
