[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modchem"
version = "0.0.1"
authors = [
 { name="Modestra", email="" },
]
description = ""
readme = "README.md"
requires-python = ">=3.10.0"
keywords = ["science", "chem", "chemistry"]
classifiers = [
   "Programming Language :: Python :: 3",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
]

[project.scripts]
chem = "modchem.commands:execute_experiment_environment"

[tool.setuptools.packages.find]
where = ["src"]